# dm-rdf12

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: fetch_w3c_rdf12_tests.py  generate_synthetic_rdf12.py  run_experimental_evaluation.py
src/rdf2pg12_py/: __init__.py  cli.py  inverse_mapping.py  io_rdf.py  mapping_cdm.py  mapping_common.py  mapping_gdm.py  mapping_sdm.py  pg_model.py  rdf12_parser.py  rdf_model.py  schema.py  writer_yarspg.py
testdata/dataset/: named-schema.ttl  named.trig
testdata/invalid/: triple-term-subject.ttl
testdata/rdf11/: simple-schema.ttl  simple.ttl
testdata/rdf12/: annotated-asserted.ttl  annotated-schema.ttl  annotated-short.ttl  dirlang.ttl  nested-triple-term.ttl  reified-triple.ttl  unasserted-triple-term.ttl
tests/: test_rdf12_parser.py  test_roundtrip.py
