[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rdf2pg12-py"
version = "0.1.0"
description = "RDF 1.2 aware mapping from RDF to Property Graphs"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
  {name = "Dominik Tomaszuk", email = "ddooss@wp.pl"},
]
dependencies = []
keywords = ["rdf", "rdf-1.2", "property-graph", "graph", "mapping"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/domel/dm-rdf12"
Repository = "https://github.com/domel/dm-rdf12"
Issues = "https://github.com/domel/dm-rdf12/issues"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
rdf2pg12-py = "rdf2pg12_py.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
